Fix resethealth command not working in 26.1